# PolyEngine

./: .Brewfile  .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  LICENSE  README.md
PolyEngine/: .clang-format  .clang-tidy  .gitattributes  CMakeLists.txt  CMakeListsCommon.cmake  CMakeListsCommon.txt  PolyEngine.sln  version.json
PolyEngine/ALAudioDevice/: ALAudioDevice.vcxproj
PolyEngine/API/: CMakeLists.txt
PolyEngine/BulletTest/: BulletTest.vcxproj  BulletTest.vcxproj.filters
PolyEngine/BulletTest/Src/: CameraMovementSystem.cpp  CameraMovementSystem.hpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  GameManagerWorldComponent.hpp  PlayerControllerComponent.cpp  PlayerControllerComponent.hpp  PlayerControllerSystem.cpp  PlayerControllerSystem.hpp
PolyEngine/CMakeModules/: FindBox2D.cmake  FindBullet.cmake  FindFreetype.cmake  FindImgui.cmake  FindOGG.cmake  FindOpenAL.cmake  FindRapidJSON.cmake  FindSDL2.cmake  FindSOIL.cmake  FindSTB.cmake  FindVorbis.cmake  Findassimp.cmake  Findepoxy.cmake  process_template.cmake  sanitizers.cmake
PolyEngine/Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters
PolyEngine/Core/Include/: Angle.hpp  BasicMath.hpp  Color.hpp  Core.hpp  Defines.hpp  Dynarray.hpp  Logger.hpp  Matrix.hpp  Quaterion.hpp  Scalar.hpp  SimdMath.hpp  String.hpp  Vector.hpp
PolyEngine/Core/Src/: AABox.cpp  AABox.hpp  AARect.cpp  AARect.hpp  Allocator.hpp  Angle.hpp  BTreeMap.hpp  BTreeNode.hpp  BTreePrimitives.hpp  BaseObject.cpp  BaseObject.hpp  BasicMath.hpp  BinaryBuffer.cpp  BinaryBuffer.hpp  Color.cpp  Color.hpp  Core.hpp  CorePCH.cpp  CorePCH.hpp  Defines.hpp  Dynarray.hpp  EnumUtils.hpp  FileIO.hpp  IterablePoolAllocator.hpp  LibraryLoader.hpp  Logger.cpp  Logger.hpp  Matrix.cpp  Matrix.hpp  ObjectLifetimeHelpers.hpp  Optional.hpp  OrderedMap.hpp  OutputStream.cpp  OutputStream.hpp  Path.cpp  Path.hpp  PoolAllocator.hpp  PriorityQueue.hpp  Quaterion.hpp  Quaternion.cpp  (+35 more)
PolyEngine/CzolgInvaders/: CMakeLists.txt  CzolgInvaders.vcxproj  CzolgInvaders.vcxproj.filters
PolyEngine/CzolgInvaders/Src/: BulletComponent.cpp  BulletComponent.hpp  BulletMovementComponent.cpp  BulletMovementComponent.hpp  CollisionComponent.hpp  CollisionSystem.cpp  ControlSystem.cpp  ControlSystem.hpp  EnemyMovementComponent.cpp  EnemyMovementComponent.hpp  GameManagerComponent.hpp  GameManagerSystem.cpp  GameManagerSystem.hpp  InvadersGame.cpp  InvadersGame.hpp  MovementComponent.hpp  MovementSystem.cpp  PlayerControllerComponent.hpp  TankComponent.hpp  TestGame.cpp  TestGame.hpp
PolyEngine/Editor/: CMakeLists.txt  Editor.vcxproj  Editor.vcxproj.filters
PolyEngine/Editor/Src/: CreateProjectDialog.hpp  CustomSDLWindow.cpp  CustomSDLWindow.hpp  DockManager.cpp  EditorApp.cpp  EditorApp.hpp  EditorUi.cpp  EditorUi.hpp  EngineManager.cpp  GlobalEventFilter.cpp  GlobalEventFilter.hpp  IEditor.hpp  LoggerWidget.cpp  LoggerWidget.hpp  Main.cpp  PolyEditorPCH.cpp  PolyEditorPCH.hpp  PolyMainWindow.cpp  PolyMainWindow.hpp  PolyWidget.cpp  PolyWidget.hpp  PolyWindow.cpp  PolyWindow.hpp  ProjectConfig.cpp  ProjectConfig.hpp  ProjectManager.cpp  ProjectManager.hpp  ViewportWidget.cpp  ViewportWidget.hpp
PolyEngine/Editor/Src-macOS/: MacOSHelper.hpp
PolyEngine/Engine/: AssetsPath.json.in  AssetsPathConfig.json.in  CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  TimeSystem.cpp  TimeSystem.hpp
PolyEngine/Engine/Include/: DX11Renderer.hpp  Engine.hpp  OpenGLRenderer.hpp  Renderer.hpp
PolyEngine/Engine/Res/: debugFragSh.shader  debugGeomSh.shader  debugVertSh.shader  test.vsh
PolyEngine/Engine/Src/: AnimKeys.hpp  AssetsPathConfig.cpp  AssetsPathConfig.hpp  BulletIncludes.hpp  CameraComponent.cpp  CameraComponent.hpp  CameraSystem.cpp  Collider3DComponent.cpp  Collider3DComponent.hpp  Collider3DImpl.hpp  ComponentBase.cpp  ComponentBase.hpp  ComponentIDGenerator.hpp  ComponentIDGeneratorImpl.hpp  ConfigBase.cpp  ConfigBase.hpp  CoreConfig.cpp  CoreConfig.hpp  CubemapResource.cpp  CubemapResource.hpp  DX11Renderer.cpp  DebugConfig.cpp  DebugConfig.hpp  DebugDrawComponents.hpp  DebugDrawSystem.cpp  DebugDrawSystem.hpp  DebugRenderingComponent.cpp  DebugRenderingComponent.hpp  DebugRenderingSystem.cpp  DebugRenderingSystem.hpp  DebugWorldComponent.hpp  DeferredTaskBase.hpp  DeferredTaskImplementation.hpp  DeferredTaskSystem.cpp  DeferredTaskSystem.hpp  DeferredTaskWorldComponent.hpp  Engine.cpp  Engine.hpp  EnginePCH.cpp  EnginePCH.hpp  (+141 more)
PolyEngine/EngineAPI/: CMakeLists.txt
PolyEngine/GLRenderingDevice/: CMakeLists.txt  GLRenderingDevice.vcxproj  GLRenderingDevice.vcxproj.filters
PolyEngine/GLRenderingDevice/Src/: GLMeshDeviceProxy.cpp  GLMeshDeviceProxy.hpp  GLRenderingDevice.cpp  GLRenderingDevice.hpp  GLShaderProgram.cpp  GLShaderProgram.hpp  GLTextFieldBufferDeviceProxy.cpp  GLTextFieldBufferDeviceProxy.hpp  GLTextureDeviceProxy.cpp  GLTextureDeviceProxy.hpp  GLUtils.hpp  GLWorldRendering.cpp
PolyEngine/Game/: BackgroundSystem.hpp  CMakeLists.txt  CzolgInvaders.vcxproj  CzolgInvaders.vcxproj.filters  Game.vcxproj  Game.vcxproj.filters  Game.vcxproj.filters.orig
PolyEngine/Game/Include/: TestGame.hpp
PolyEngine/Game/Res/: .gitignore
PolyEngine/PolyEditor/: CMakeLists.txt  EditorMainWindow.cpp  EditorMainWindow.hpp  EditorMainWindow.ui  Main.cpp  PolyEditor.vcxproj  PolyEditor.vcxproj.filters
PolyEngine/SandboxRendering/: CzolgInvaders.vcxproj  SandboxRendering.vcxproj
PolyEngine/Scripts/: Game.cpp.in  Game.hpp.in  InitializeSubmodules.py  Proj-CMakeLists.txt.in  ProjectTool.py  RunDocker.py  Sln-CMakeLists.txt.in  pe_tools.py  poly_tools.py
PolyEngine/Standalone/: CMakeLists.txt  Standalone.vcxproj  run_script.in  run_script_nix.in  run_script_win.in
PolyEngine/Tests/: CMakeLists.txt
PolyEngine/UnitTests/: CMakeLists.txt  TestConfig.json  UnitTests.vcxproj  UnitTests.vcxproj.filters
PolyEngine/WindowsGLStandalone/: AssetsPath.json  CMakeLists.txt  WindowsGLStandalone.vcxproj  WindowsGLStandalone.vcxproj.filters
PolyEngine/WindowsStandalone/: WindowsStandalone.vcxproj  WindowsStandalone.vcxproj.filters
(+2545 files in other folders)
