set(POLYENGINEAPI_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/Src)

file(GLOB_RECURSE POLYENGINEAPI_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR} 
	${POLYENGINEAPI_INCLUDE}/*.cpp 
	${POLYENGINEAPI_INCLUDE}/*.hpp
	${POLYENGINEAPI_INCLUDE}/*.h)
GenerateSourceGoups("${POLYENGINEAPI_SRCS}")

add_library(${API_TARGET} SHARED ${POLYENGINEAPI_SRCS})
target_compile_definitions(${API_TARGET} PRIVATE _API)
target_compile_options(${API_TARGET} PRIVATE $<$<BOOL:${SIMD}>:${SIMD_FLAGS}>)
target_include_directories(${API_TARGET} PUBLIC ${POLYENGINEAPI_INCLUDE})


target_link_libraries(${API_TARGET} PUBLIC ${CORE_TARGET} )

#set_target_properties(${API_TARGET} PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "${CMAKE_CURRENT_LIST_DIR}/Src/CorePCH.hpp")
set_target_properties(${API_TARGET} PROPERTIES FOLDER "Engine" )

#cotire(${API_TARGET})