set(POLYENGINE_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/Src)

file(GLOB_RECURSE POLYENGINE_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR} 
	${POLYENGINE_INCLUDE}/*.cpp 
	${POLYENGINE_INCLUDE}/*.hpp
	${POLYENGINE_INCLUDE}/*.h
)
GenerateSourceGoups("${POLYENGINE_SRCS}")

add_library(${ENGINE_TARGET} SHARED ${POLYENGINE_SRCS})
target_compile_definitions(${ENGINE_TARGET} PRIVATE _ENGINE)

target_include_directories(${ENGINE_TARGET} 
	PUBLIC 
			${POLYENGINE_INCLUDE} 
	PRIVATE 
			${BULLET_INCLUDE_DIRS}
			${STB_INCLUDE_DIRS} )

target_link_libraries(${ENGINE_TARGET} 
	PUBLIC ${CORE_TARGET} ${API_TARGET} ${BEGIN_EXPORT_ALL_SYMBOLS} Imgui ${END_EXPORT_ALL_SYMBOLS} 
	PRIVATE assimp freetype OpenAL ogg vorbis vorbisfile 
		${BEGIN_EXPORT_ALL_SYMBOLS} ${BOX2D_LIBRARIES} ${BULLET_LIBRARIES} ${END_EXPORT_ALL_SYMBOLS})

set_target_properties(${ENGINE_TARGET} PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "${CMAKE_CURRENT_LIST_DIR}/Src/EnginePCH.hpp")
set_target_properties(${ENGINE_TARGET} PROPERTIES FOLDER "Engine" )
cotire(${ENGINE_TARGET})
