find_package(SDL2 REQUIRED)

set(STANDALONE_INCLUDE Src)

file(GLOB_RECURSE STANDALONE_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} 
	${STANDALONE_INCLUDE}/*.cpp 
	${STANDALONE_INCLUDE}/*.hpp
	${STANDALONE_INCLUDE}/*.h)
GenerateSourceGoups("${STANDALONE_SRCS}")

add_executable(${STANDALONE_TARGET} ${STANDALONE_SRCS}) #should we call it `polygo` instead? :P
target_include_directories(${STANDALONE_TARGET} PRIVATE ${SDL2_INCLUDE_DIRS})
target_link_libraries(${STANDALONE_TARGET} PRIVATE ${ENGINE_TARGET} ${CORE_TARGET} ${SDL2_LIBRARIES} ${CMAKE_DL_LIBS})
add_dependencies(${STANDALONE_TARGET} ${GLDEVICE_TARGET}) #dynamically loaded

cotire(${STANDALONE_TARGET})

CopyArtifacts(${STANDALONE_TARGET})
