set(STANDALONE_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/Src)

file(GLOB_RECURSE STANDALONE_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR} 
	${STANDALONE_INCLUDE}/*.cpp 
	${STANDALONE_INCLUDE}/*.hpp
	${STANDALONE_INCLUDE}/*.h)
GenerateSourceGoups("${STANDALONE_SRCS}")

add_executable(${STANDALONE_TARGET} ${STANDALONE_SRCS})
target_include_directories(${STANDALONE_TARGET} PRIVATE ${SDL2_INCLUDE_DIRS})
target_link_libraries(${STANDALONE_TARGET} PRIVATE ${ENGINE_TARGET} ${CORE_TARGET} ${SDL2_LIBRARIES} ${CMAKE_DL_LIBS})
add_dependencies(${STANDALONE_TARGET} Prerequisites ${GLDEVICE_TARGET})
